--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -80,6 +80,7 @@
           <h5 class="resume-item-details" itemprop="description">{{ education.awards }}</h5>
           <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
+          {% endfor %}
         {% endfor %}
       </section>
       <!-- end Education -->
